...
                        }
                        .buttonStyle(PlainButtonStyle()) // Ensures button doesn’t inherit default row styling
                    }
                }
                .padding()
            }
            .accessibilityIdentifier("MonthGridCollection")
            .navigationTitle(viewStore.months.first?.year?.year.description ?? "Year")
            .task { viewStore.send(.load) }
        }
    }
}

...
