...
                    ForEach(viewStore.entries, id: \.objectID) { entry in
                        EntryRow(entry: entry)
                    }
                    .onDelete { viewStore.send(.delete($0)) }
                }
            }
            .accessibilityIdentifier("MonthDetailView")
            .navigationTitle(
                "\(viewStore.month?.monthName ?? "Month") \(viewStore.month?.year?.year.description ?? "")"
            )
            .toolbar {
                ToolbarItemGroup(placement: .navigationBarTrailing) {
                    sortMenu(viewStore: viewStore)
...
